--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "description": "Trung's AI",
   "main": "index.js",
   "scripts": {
+    "start": "bun run index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
