--- a/package.json
+++ b/package.json
@@ -38,5 +38,15 @@
   "bugs": {
     "url": "https://github.com/Trung-Development/self-trained-AI/OVMAI/issues"
   },
-  "homepage": "https://github.com/Trung-Development/self-trained-AI#readme"
+  "homepage": "https://github.com/Trung-Development/self-trained-AI#readme",
+  "devDependencies": {
+    "@types/base-64": "^1.0.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1",
+    "@types/readline-sync": "^1.4.8",
+    "@types/synaptic": "^1.0.8",
+    "@types/utf8": "^3.0.3",
+    "typescript": "^5.7.2"
+  }
 }
